# fin-protoc

./: .gitignore  BinaryPacket.g4  Makefile  build.bat  build.sh  generate.sh  go.mod  go.sum  main.go  readme.md  roadmap.md  test.sh  todo.md
.github/workflows/: ci.yml
chat/: Cargo.toml
chat/proto/: chat.dsl  chat_format.dsl
chat/src/: client.rs  message.rs  sample_binary.rs  server.rs
cmd/: compile.go  format.go  lib.go  main.go  root.go
grammar/: PacketDsl.g4
internal/grammar/: PacketDsl.interp  PacketDsl.tokens  PacketDslLexer.interp  PacketDslLexer.tokens  packetdsl_base_visitor.go  packetdsl_lexer.go  packetdsl_parser.go  packetdsl_visitor.go
internal/model/: model.go
internal/parser/: BinaryPacket.interp  BinaryPacketLexer.interp  binarypacket_base_visitor.go  binarypacket_lexer.go  binarypacket_parser.go  binarypacket_visitor.go  common.go  common_test.go  cpp_generator.go  custom_visitor_test.go  generator.go  generator_test.go  go_generator.go  java_generator.go  lua_wsp_generator.go  lua_wsp_generator_test.go  packet_dsl_formattor.go  packet_dsl_formattor_test.go  packet_dsl_parser.go  packet_dsl_parser_test.go  parser.go  py_generator.go  rust_generator.go  rust_generator_test.go
internal/parser/testdata/: formatted-1.dsl  formatted.dsl  need_format.dsl  sample_binary.dsl  sample_binary_formatted.dsl  sample_binary_formatted0.dsl  test_packet.dsl
lib/: libpacketdsl.h
lib/test/: Makefile
